--- a/facility.html
+++ b/facility.html
@@ -224,7 +224,7 @@
             </div>
             <div class="col-md-3 mb-3">
               <img
-                src="images/facility_kasai_five.svg"
+                src="images/facility_kasai_five.jpg"
                 alt="エントランス"
                 class="img-fluid"
               />
@@ -315,7 +315,7 @@
             </div>
             <div class="col-md-3 mb-3">
               <img
-                src="images/facility_fujimaki_four.svg"
+                src="images/facility_fujimaki_four.jpg"
                 alt="居間"
                 class="img-fluid"
               />
