--- a/facility.html
+++ b/facility.html
@@ -325,6 +325,7 @@
               <ul class="list-unstyled">
                 <li>ご遺体安置室、シャワー室</li>
                 <li>洗面台、トイレ（バリアフリー）</li>
+                <li>寺院控え室</li>
                 <li>キッチンや冷蔵庫なども</li>
                 <li>ご用意しています</li>
               </ul>
@@ -381,7 +382,7 @@
             </div>
             <div class="col-md-3">
               <ul class="list-unstyled">
-                <li>ご遺体安置室、トイレ、洗面室</li>
+                <li>ご遺体安置室、トイレ、洗面室、寺院控え室</li>
                 <li>冷蔵庫などもご用意しています</li>
               </ul>
               <a href="plans.html#bekkan"
