--- a/offering.html
+++ b/offering.html
@@ -147,7 +147,7 @@
               />
               <p>小かご 10,000円（税別）〜</p>
             </div>
-            <div class="col-md-4 mb-5">
+            <div class="col-md-3 mb-5">
               <img
                 src="images/namabana_22000.JPG"
                 alt="生花 20,000円（税別）"
@@ -155,7 +155,7 @@
               />
               <p>生花 20,000円（税別）</p>
             </div>
-            <div class="col-md-4 mb-5">
+            <div class="col-md-3 mb-5">
               <img
                 src="images/namabana_25300.JPG"
                 alt="生花 23,000円（税別）"
@@ -163,13 +163,21 @@
               />
               <p>生花 23,000円（税別）</p>
             </div>
-            <div class="col-md-4 mb-5">
+            <div class="col-md-3 mb-5">
               <img
                 src="images/namabana_27500.JPG"
                 alt="生花 25,000円（税別）"
                 class="img-fluid mb-3"
               />
-              <p>生花 25,000円（税別）</p>
+              <p>生花 25,000円（税別）〜</p>
+            </div>
+            <div class="col-md-3 mb-5">
+              <img
+                src="images/morikago_15000.png"
+                alt="もりカゴ 15,000円（税別）〜"
+                class="img-fluid mb-3"
+              />
+              <p>ローソク線香・もりカゴ 15,000円（税別）〜</p>
             </div>
             <div class="col-md-8">
               <img
@@ -204,11 +212,13 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-6">
-              <img
-                src="images/offering_order_button.svg"
-                alt="FAX・メール用記入紙／PDFダウンロード"
-                class="img-fulid"
-              />
+              <a href="pdf/ordersheet.pdf" target="_blank">
+                <img
+                  src="images/offering_order_button.svg"
+                  alt="FAX・メール用記入紙／PDFダウンロード"
+                  class="img-fulid"
+                />
+              </a>
             </div>
           </div>
         </div>
