--- a/plans.html
+++ b/plans.html
@@ -96,7 +96,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12 mb-5">
-                        <h4>ご家族やご親戚を中心に少人数で、<br>
+                        <h4>ご家族やご親戚を中心に<br>
                             火葬・通夜・葬儀といった一連の儀式を執り行います。</h4>
                     </div>
                     <div class="col-md-6 mb-5">
@@ -112,9 +112,11 @@
                     <div class="col-md-8">
                         <h1 class="display-4 font-weight-bold text-main-color">メモリアルホール <br class="d-lg-none">かさい</h1>
                         <img src="images/plans_sakurahall.svg" alt="さくらホール" class="img-fluid mb-3">
-                        <p class="h3 text-black mb-5">＜60万プラン（税別）～＞</p>
+                        <p class="h3 text-black mb-5">＜60万プラン<span class="small">（税別）</span>～＞</p>
                     </div>
                     <div class="col-md-10">
+                        <h1 class="text-main-color">祭壇例</h1>
+                        <p>※祭壇の種類によって価格が異なります。</p>
                         <img src="images/plans_saidan_one.jpg" alt="祭壇画像" class="img-fluid mb-5">
                     </div>
                 </div>
@@ -146,32 +148,32 @@
                     <div class="col-md-10">
                         <p class="h3">■別料金</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item">○貸布団</li>
+                            <li class="list-inline-item">○安置代</li>
                             <li class="list-inline-item">○駐車係</li>
                             <li class="list-inline-item">○会葬礼状</li>
                             <li class="list-inline-item">○香典返し</li>
                             <li class="list-inline-item">○法要菓子</li>
                             <li class="list-inline-item">○通夜料理（オードブルなど）</li>
                             <li class="list-inline-item">○法要料理（お膳料理）</li>
-                            <li class="list-inline-item">○お酒・飲み物等</li>
+                            <li class="list-inline-item">○お酒・飲み物</li>
                             <li class="list-inline-item">○仏　膳</li>
-                            <li class="list-inline-item">○宗教者へのお礼</li>
-                            <li class="list-inline-item">○式場祭壇用ダルマ生花（税別 15,000円〜）</li>
-                            <li class="list-inline-item">○式場祭壇用小かご生花（税別 10,000円〜）</li>
+                            <li class="list-inline-item">○宗教者へのお礼　等</li>
+                            <li class="list-inline-item">○式場祭壇用ダルマ生花</li>
+                            <li class="list-inline-item">○式場祭壇用小かご生花</li>
                         </ul>
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         <h1 class="text-main-color">祭壇例</h1>
                         <p>※祭壇の種類によって価格が異なります。</p>
                     </div>
                     <div class="col-md-6 mb-5">
-                        <img src="images/plans_saidan_two.svg" alt="祭壇画像1" class="img-fluid">
+                        <img src="images/plans_saidan_1.jpg" alt="祭壇画像1" class="img-fluid">
                     </div>
                     <div class="col-md-6 mb-5">
-                        <img src="images/plans_saidan_two.svg" alt="祭壇画像2" class="img-fluid">
-                    </div>
+                        <img src="images/plans_saidan_2.jpg" alt="祭壇画像2" class="img-fluid">
+                    </div> -->
                     <div class="col-md-8">
                         <a href="facility.html#kasai"><img src="images/plans_kasai_button.svg" alt="メモリアルホールかさい／施設を見る" class="img-fluid"></a>
                     </div>
@@ -203,9 +205,11 @@
                     <div class="col-md-8">
                         <h1 class="display-4 font-weight-bold text-main-color">メモリアルホール <br class="d-lg-none">かさい</h1>
                         <img src="images/plans_cosmoshall.svg" alt="コスモスホール" class="img-fluid mb-3">
-                        <p class="h3 text-black mb-5">＜40万プラン（税別）～＞</p>
+                        <p class="h3 text-black mb-5">＜40万プラン<span class="small">（税別）</span>～＞</p>
                     </div>
                     <div class="col-md-10">
+                        <h1 class="text-main-color">祭壇例</h1>
+                        <p>※祭壇の種類によって価格が異なります。</p>
                         <img src="images/plans_cosmos_saidan.jpg" alt="祭壇画像" class="img-fluid mb-5">
                     </div>
                 </div>
@@ -237,22 +241,22 @@
                     <div class="col-md-10">
                         <p class="h3">■別料金</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item">○貸布団</li>
+                            <li class="list-inline-item">○安置代</li>
                             <li class="list-inline-item">○会葬礼状</li>
                             <li class="list-inline-item">○香典返し</li>
                             <li class="list-inline-item">○法要菓子</li>
                             <li class="list-inline-item">○通夜料理（オードブルなど）</li>
                             <li class="list-inline-item">○法要料理（お膳料理）</li>
-                            <li class="list-inline-item">○お酒・飲み物等</li>
+                            <li class="list-inline-item">○お酒・飲み物</li>
                             <li class="list-inline-item">○仏　膳</li>
-                            <li class="list-inline-item">○宗教者へのお礼</li>
-                            <li class="list-inline-item">○式場祭壇用ダルマ生花（税別 15,000円〜）</li>
-                            <li class="list-inline-item">○式場祭壇用小かご生花（税別 10,000円〜）</li>
+                            <li class="list-inline-item">○宗教者へのお礼　等</li>
+                            <li class="list-inline-item">○式場祭壇用ダルマ生花</li>
+                            <li class="list-inline-item">○式場祭壇用小かご生花</li>
                         </ul>
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-12">
+                    <!-- <div class="col-md-12">
                         <h1 class="text-main-color">祭壇例</h1>
                         <p>※祭壇の種類によって価格が異なります。</p>
                     </div>
@@ -261,7 +265,7 @@
                     </div>
                     <div class="col-md-6 mb-5">
                         <img src="images/plans_saidan_two.svg" alt="祭壇画像2" class="img-fluid">
-                    </div>
+                    </div> -->
                     <div class="col-md-8">
                         <a href="facility.html#cosmos"><img src="images/plans_kasai_button.svg" alt="メモリアルホールかさい／施設を見る" class="img-fluid"></a>
                     </div>
@@ -279,9 +283,11 @@
                     <div class="col-md-8">
                         <h1 class="display-4 font-weight-bold text-main-color">家族葬ホール</h1>
                         <img src="images/plans_fujimaki.svg" alt="家族葬ホール ふじまき" class="img-fluid mb-3">
-                        <p class="h3 text-black mb-5">＜40万プラン（税別）～＞</p>
+                        <p class="h3 text-black mb-5">＜40万プラン<span class="small">（税別）</span>～＞</p>
                     </div>
                     <div class="col-md-10">
+                        <h1 class="text-main-color">祭壇例</h1>
+                        <p>※祭壇の種類によって価格が異なります。</p>
                         <img src="images/plans_fujimaki_saidan.jpg" alt="祭壇画像" class="img-fluid mb-5">
                     </div>
                 </div>
@@ -313,17 +319,17 @@
                     <div class="col-md-10">
                         <p class="h3">■別料金</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item">○貸布団</li>
+                            <li class="list-inline-item">○安置代</li>
                             <li class="list-inline-item">○会葬礼状</li>
                             <li class="list-inline-item">○香典返し</li>
                             <li class="list-inline-item">○法要菓子</li>
                             <li class="list-inline-item">○通夜料理（オードブルなど）</li>
                             <li class="list-inline-item">○法要料理（お膳料理）</li>
-                            <li class="list-inline-item">○お酒・飲み物等</li>
+                            <li class="list-inline-item">○お酒・飲み物</li>
                             <li class="list-inline-item">○仏　膳</li>
-                            <li class="list-inline-item">○宗教者へのお礼</li>
-                            <li class="list-inline-item">○式場祭壇用ダルマ生花（税別 15,000円〜）</li>
-                            <li class="list-inline-item">○式場祭壇用小かご生花（税別 10,000円〜）</li>
+                            <li class="list-inline-item">○宗教者へのお礼　等</li>
+                            <li class="list-inline-item">○式場祭壇用ダルマ生花</li>
+                            <li class="list-inline-item">○式場祭壇用小かご生花</li>
                         </ul>
                     </div>
                     <div class="col-md-8">
@@ -343,9 +349,11 @@
                     <div class="col-md-8">
                         <h1 class="display-4 font-weight-bold text-main-color">家族葬ホール</h1>
                         <img src="images/plans_bekkan.svg" alt="家族葬ホール 別館" class="img-fluid mb-3">
-                        <p class="h3 text-black mb-5">＜30万プラン（税別）～＞</p>
+                        <p class="h3 text-black mb-5">＜30万プラン<span class="small">（税別）</span>～＞</p>
                     </div>
                     <div class="col-md-10">
+                        <h1 class="text-main-color">祭壇例</h1>
+                        <p>※祭壇の種類によって価格が異なります。</p>
                         <img src="images/plans_bekkan_saidan.svg" alt="祭壇画像" class="img-fluid mb-5">
                     </div>
                 </div>
@@ -374,17 +382,17 @@
                         <ul class="list-inline">
                             <li class="list-inline-item">○遺影</li>
                             <li class="list-inline-item">○マイクロバス</li>
-                            <li class="list-inline-item">○貸布団</li>
+                            <li class="list-inline-item">○安置代</li>
                             <li class="list-inline-item">○会葬礼状</li>
                             <li class="list-inline-item">○香典返し</li>
                             <li class="list-inline-item">○法要菓子</li>
                             <li class="list-inline-item">○通夜料理（オードブルなど）</li>
                             <li class="list-inline-item">○法要料理（お膳料理）</li>
-                            <li class="list-inline-item">○お酒・飲み物等</li>
+                            <li class="list-inline-item">○お酒・飲み物</li>
                             <li class="list-inline-item">○仏　膳</li>
-                            <li class="list-inline-item">○宗教者へのお礼</li>
-                            <li class="list-inline-item">○式場祭壇用ダルマ生花（税別 15,000円〜）</li>
-                            <li class="list-inline-item">○式場祭壇用小かご生花（税別 10,000円〜）</li>
+                            <li class="list-inline-item">○宗教者へのお礼　等</li>
+                            <li class="list-inline-item">○式場祭壇用ダルマ生花</li>
+                            <li class="list-inline-item">○式場祭壇用小かご生花</li>
                         </ul>
                     </div>
                     <div class="col-md-8">
