--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177407297-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-177407297-1');
+    </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -59,9 +69,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                
-                    <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" width="100%">
-                
+                <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" width="100%">
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
