--- a/facility.html
+++ b/facility.html
@@ -327,7 +327,7 @@
                     </div>
                 </div>
                 <p class="copy">
-                    <span class="mr-1">〒037–0067</span><span class="mr-2">青森県五所川原市字敷島町20</span><span class="mr-1">Copyright©2020</span><span class="mr-1 ryumin">有限会社 葛西造花店</span><span>All Rights Reserved.</span>
+                    <span class="mr-1">〒037–0067</span><span class="mr-2">青森県五所川原市字敷島町20</span><span class="mr-1">Copyright©2020</span><span class="mr-1 ryumin myfont">有限会社 葛西造花店</span><span>All Rights Reserved.</span>
                 </p>
             </div>
         </section>
