--- a/offering.html
+++ b/offering.html
@@ -109,28 +109,32 @@
                 </div>
                 <div class="row justify-content-center text-center mb-5">
                     <div class="col-md-6 mb-5">
-                        <img src="images/daruma_16500.jpg" alt="ダルマ 15,000円（税別）〜" class="img-fluid mb-3" />
+                        <img src="images/daruma_16500.JPG" alt="ダルマ 15,000円（税別）〜" class="img-fluid mb-3" />
                         <p>ダルマ 15,000円（税別）〜</p>
                     </div>
                     <div class="col-md-6 mb-5">
                         <img src="images/kokago_11000.JPG" alt="小かご 11,000円（税別）〜" class="img-fluid mb-3" />
                         <p>小かご 10,000円（税別）〜</p>
                     </div>
-                    <div class="col-md-3 mb-5">
+                    <div class="col-md-15 mb-5">
                         <img src="images/namabana_22000.JPG" alt="生花 20,000円（税別）" class="img-fluid mb-3" />
                         <p>生花 20,000円（税別）</p>
                     </div>
-                    <div class="col-md-3 mb-5">
+                    <div class="col-md-15 mb-5">
                         <img src="images/namabana_25300.JPG" alt="生花 23,000円（税別）" class="img-fluid mb-3" />
                         <p>生花 23,000円（税別）</p>
                     </div>
-                    <div class="col-md-3 mb-5">
+                    <div class="col-md-15 mb-5">
                         <img src="images/namabana_27500.JPG" alt="生花 25,000円（税別）" class="img-fluid mb-3" />
                         <p>生花 25,000円（税別）〜</p>
                     </div>
-                    <div class="col-md-3 mb-5">
-                        <img src="images/morikago_15000.png" alt="もりカゴ 15,000円（税別）〜" class="img-fluid mb-3" />
+                    <div class="col-md-15 mb-5">
+                        <img src="images/morikago_15000.png" alt="ローソク線香・もりカゴ 15,000円（税別）〜" class="img-fluid mb-3" />
                         <p>ローソク線香・もりカゴ 15,000円（税別）〜</p>
+                    </div>
+                    <div class="col-md-15 mb-5">
+                        <img src="images/morikago_15000-2.png" alt="缶詰・もりカゴ 15,000円（税別）〜" class="img-fluid mb-3" />
+                        <p>缶詰・もりカゴ 15,000円（税別）〜</p>
                     </div>
                     <div class="col-md-8">
                         <img src="images/offering_order.svg" alt="ご注文は電話またはFAXで承ります。" class="img-fluid" />
