--- a/sitemap.html
+++ b/sitemap.html
@@ -5,12 +5,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177407297-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-177407297-1');
+        gtag('config', 'UA-177407297-1');
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -42,13 +44,13 @@
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                 </div>
             </div>
@@ -81,7 +83,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" width="100%">
+                <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" width="100%">
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
