--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177407297-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-177407297-1');
+        gtag('config', 'UA-177407297-1');
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -42,13 +44,13 @@
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                 </div>
             </div>
@@ -85,13 +87,13 @@
                 <div id="carousel" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="images/hero.jpg" alt="メモリアルホールかさい メイン">
+                            <img class="d-block w-100" src="images/hero.webp" alt="メモリアルホールかさい メイン">
                         </div>
                         <div class="carousel-item">
-                            <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                            <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                         </div>
                         <div class="carousel-item">
-                            <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                            <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
                         </div>
                     </div>
                 </div>
@@ -137,24 +139,24 @@
                 <div class="row justify-content-center text-center">
                     <div class="col-md-4 mb-3">
                         <img src="images/types_one.svg" alt="一般葬" class="img-fluid d-none d-sm-block">
-                        <p class="one">ご家族やご親戚をはじめ、<br>ご友人やお仕事関係の方など、<br>
-                            故人様と交流のあった方々が広く参列する<br>一般的なお葬式です。</p>
+                        <p class="one">ご家族やご親戚をはじめ、<br>ご友人やお仕事関係の方など、<br> 故人様と交流のあった方々が広く参列する
+                            <br>一般的なお葬式です。</p>
                     </div>
                     <div class="col-md-4 mb-3">
                         <img src="images/types_two.svg" alt="家族葬" class="img-fluid d-none d-sm-block">
-                        <p class="two">ご家族やご親戚を中心に少人数で、<br>
-                            火葬・通夜・葬儀といった<br>一連の儀式を執り行います。</p>
+                        <p class="two">ご家族やご親戚を中心に少人数で、<br> 火葬・通夜・葬儀といった
+                            <br>一連の儀式を執り行います。</p>
                     </div>
                     <div class="col-md-4 mb-3">
                         <img src="images/types_four.svg" alt="1日葬・直葬" class="img-fluid d-none d-sm-block">
-                        <p class="four">お通夜は行わず、火葬とご葬儀を<br>一日で行うお葬式です。
-                            ご家族やご親戚数名で故人様をお見送りします。</p>
+                        <p class="four">お通夜は行わず、火葬とご葬儀を<br>一日で行うお葬式です。 ご家族やご親戚数名で故人様をお見送りします。
+                        </p>
                     </div>
                     <div class="col-md-4 mb-3">
                         <img src="images/types_three.svg" alt="自宅葬" class="img-fluid d-none d-sm-block">
-                        <p class="three">故人様のご自宅で行うお葬式です。<br>
-                            ご自宅のスペースやご要望に合わせた内容で、<br>
-                            お通夜、ご葬儀を行います。</p>
+                        <p class="three">故人様のご自宅で行うお葬式です。<br> ご自宅のスペースやご要望に合わせた内容で、
+                            <br> お通夜、ご葬儀を行います。
+                        </p>
                     </div>
                     <div class="col-md-4 mb-3">
                         <img src="images/types_five.svg" alt="お別れの会" class="img-fluid d-none d-sm-block">
@@ -185,16 +187,16 @@
                     <div class="col-md-6 mb-3 fa-hover">
                         <a href="facility.html#fujimaki">
                             <img src="images/fujimaki.svg" alt="家族葬ホール ふじまき" class="img-fluid">
-                            <p>故人様の大切なお見送りのときを<br>
-                                一緒に過ごせるプライベートな空間</p>
+                            <p>故人様の大切なお見送りのときを<br> 一緒に過ごせるプライベートな空間
+                            </p>
                             <h2>家族葬ホール ふじまき</h2>
                         </a>
                     </div>
                     <div class="col-md-6 fa-hover">
                         <a href="facility.html#bekkan">
                             <img src="images/bekkan.svg" alt="家族葬ホール 別館" class="img-fluid">
-                            <p>小規模な家族葬のご希望に応える、<br>
-                                利便性を兼ね備えたコンパクトな会場</p>
+                            <p>小規模な家族葬のご希望に応える、<br> 利便性を兼ね備えたコンパクトな会場
+                            </p>
                             <h2>家族葬ホール 別館</h2>
                         </a>
                     </div>
