--- a/offering.html
+++ b/offering.html
@@ -5,14 +5,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177407297-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
 
-    gtag("config", "UA-177407297-1");
+        gtag("config", "UA-177407297-1");
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -40,7 +40,7 @@
                 <img src="images/logo_w.svg" width="200" class="d-block mx-auto" />
             </div>
             <div>
-                <img src="images/hero.jpg" alt="メモリアルホールかさい メイン" class="img-fluid" />
+                <img src="images/hero.webp" alt="メモリアルホールかさい メイン" class="img-fluid" />
             </div>
             <!-- スマホヘッダーインフォ -->
             <div class="py-3 text-center">
@@ -75,7 +75,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                <img src="images/hero.jpg" alt="メモリアルホールかさい メイン" width="100%" />
+                <img src="images/hero.webp" alt="メモリアルホールかさい メイン" width="100%" />
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
@@ -112,23 +112,23 @@
                 </div>
                 <div class="row justify-content-center text-center mb-5">
                     <div class="col-md-6 mb-5">
-                        <img src="images/daruma_16500.JPG" alt="ダルマ 15,000円（税別）〜" class="img-fluid mb-3" />
+                        <img src="images/daruma_16500.webp" alt="ダルマ 15,000円（税別）〜" class="img-fluid mb-3" />
                         <p>ダルマ 15,000円（税別）〜</p>
                     </div>
                     <div class="col-md-6 mb-5">
-                        <img src="images/kokago_11000.JPG" alt="小かご 11,000円（税別）〜" class="img-fluid mb-3" />
+                        <img src="images/kokago_11000.webp" alt="小かご 11,000円（税別）〜" class="img-fluid mb-3" />
                         <p>小かご 10,000円（税別）〜</p>
                     </div>
                     <div class="col-md-15 mb-5">
-                        <img src="images/namabana_22000.JPG" alt="生花 20,000円（税別）" class="img-fluid mb-3" />
+                        <img src="images/namabana_22000.webp" alt="生花 20,000円（税別）" class="img-fluid mb-3" />
                         <p>生花 20,000円（税別）</p>
                     </div>
                     <div class="col-md-15 mb-5">
-                        <img src="images/namabana_25300.JPG" alt="生花 23,000円（税別）" class="img-fluid mb-3" />
+                        <img src="images/namabana_25300.webp" alt="生花 23,000円（税別）" class="img-fluid mb-3" />
                         <p>生花 23,000円（税別）</p>
                     </div>
                     <div class="col-md-15 mb-5">
-                        <img src="images/namabana_27500.JPG" alt="生花 25,000円（税別）" class="img-fluid mb-3" />
+                        <img src="images/namabana_27500.webp" alt="生花 25,000円（税別）" class="img-fluid mb-3" />
                         <p>生花 25,000円（税別）〜</p>
                     </div>
                     <div class="col-md-15 mb-5">
