--- a/plans.html
+++ b/plans.html
@@ -5,12 +5,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177407297-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-177407297-1');
+        gtag('config', 'UA-177407297-1');
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -38,7 +40,7 @@
                 <img src="images/logo_w.svg" width="200" class="d-block mx-auto">
             </div>
             <div>
-                <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" class="img-fluid">
+                <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" class="img-fluid">
             </div>
             <!-- スマホヘッダーインフォ -->
             <div class="py-3 text-center">
@@ -69,7 +71,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" width="100%">
+                <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" width="100%">
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
@@ -106,8 +108,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12 mb-5">
-                        <h4>ご家族やご親戚を中心に<br>
-                            火葬・通夜・葬儀といった一連の儀式を執り行います。</h4>
+                        <h4>ご家族やご親戚を中心に<br> 火葬・通夜・葬儀といった一連の儀式を執り行います。
+                        </h4>
                     </div>
                     <div class="col-md-6 mb-5">
                         <div class="plans_one_headline">
@@ -127,7 +129,7 @@
                     <div class="col-md-10">
                         <h1 class="text-main-color">祭壇例</h1>
                         <p>※祭壇の種類によって価格が異なります。</p>
-                        <img src="images/plans_saidan_one.jpg" alt="祭壇画像" class="img-fluid mb-5">
+                        <img src="images/plans_saidan_one.webp" alt="祭壇画像" class="img-fluid mb-5">
                     </div>
                 </div>
                 <div class="row justify-content-center mb-5">
@@ -179,10 +181,10 @@
                         <p>※祭壇の種類によって価格が異なります。</p>
                     </div>
                     <div class="col-md-6 mb-5">
-                        <img src="images/plans_saidan_1.jpg" alt="祭壇画像1" class="img-fluid">
+                        <img src="images/plans_saidan_1.webp" alt="祭壇画像1" class="img-fluid">
                     </div>
                     <div class="col-md-6 mb-5">
-                        <img src="images/plans_saidan_2.jpg" alt="祭壇画像2" class="img-fluid">
+                        <img src="images/plans_saidan_2.webp" alt="祭壇画像2" class="img-fluid">
                     </div> -->
                     <div class="col-md-8">
                         <a href="facility.html#kasai"><img src="images/plans_kasai_button.svg" alt="メモリアルホールかさい／施設を見る" class="img-fluid"></a>
@@ -199,8 +201,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12 mb-5">
-                        <h4>ご家族やご親戚を中心に少人数で、<br>
-                            火葬・通夜・葬儀といった一連の儀式を執り行います。</h4>
+                        <h4>ご家族やご親戚を中心に少人数で、<br> 火葬・通夜・葬儀といった一連の儀式を執り行います。
+                        </h4>
                     </div>
                     <div class="col-md-6 mb-5">
                         <div class="plans_two_headline">
@@ -220,7 +222,7 @@
                     <div class="col-md-10">
                         <h1 class="text-main-color">祭壇例</h1>
                         <p>※祭壇の種類によって価格が異なります。</p>
-                        <img src="images/plans_cosmos_saidan.jpg" alt="祭壇画像" class="img-fluid mb-5">
+                        <img src="images/plans_cosmos_saidan.webp" alt="祭壇画像" class="img-fluid mb-5">
                     </div>
                 </div>
                 <div class="row justify-content-center mb-5">
@@ -298,7 +300,7 @@
                     <div class="col-md-10">
                         <h1 class="text-main-color">祭壇例</h1>
                         <p>※祭壇の種類によって価格が異なります。</p>
-                        <img src="images/plans_fujimaki_saidan.jpg" alt="祭壇画像" class="img-fluid mb-5">
+                        <img src="images/plans_fujimaki_saidan.webp" alt="祭壇画像" class="img-fluid mb-5">
                     </div>
                 </div>
                 <div class="row justify-content-center mb-5">
@@ -420,8 +422,8 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-12 mb-5">
-                        <h4>直葬は、お通夜・葬儀などの儀式は行わず、<br>
-                            限られた人数で火葬場でお見送りする形式です。</h4>
+                        <h4>直葬は、お通夜・葬儀などの儀式は行わず、<br> 限られた人数で火葬場でお見送りする形式です。
+                        </h4>
                     </div>
                     <div class="col-md-6 mb-5">
                         <div class="plans_three_headline">
@@ -434,8 +436,8 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-12 mb-5">
-                        <h4>一日葬は、お通夜を行わずに、<br>
-                            火葬から葬儀までを一日で執り行う形式です。</h4>
+                        <h4>一日葬は、お通夜を行わずに、<br> 火葬から葬儀までを一日で執り行う形式です。
+                        </h4>
                     </div>
                     <div class="col-md-6 mb-5">
                         <div class="plans_four_headline">
