--- a/profile.html
+++ b/profile.html
@@ -5,12 +5,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177407297-1"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-177407297-1');
+        gtag('config', 'UA-177407297-1');
     </script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -38,7 +40,7 @@
                 <img src="images/logo_w.svg" width="200" class="d-block mx-auto">
             </div>
             <div>
-                <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" class="img-fluid">
+                <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" class="img-fluid">
             </div>
             <!-- スマホヘッダーインフォ -->
             <div class="py-3 text-center">
@@ -69,7 +71,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" width="100%">
+                <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" width="100%">
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
