--- a/index.html
+++ b/index.html
@@ -115,6 +115,25 @@
     </header>
     <!-- メイン -->
     <main>
+        <section style="margin-bottom: 50px">
+          <div class="row justify-content-center text-center mx-auto">
+            <div class="col-md-12">
+              <h1 class="headline">
+                新型コロナウイルス対策と<br
+                  class="d-lg-none"
+                />ご来館の際のお願い
+              </h1>
+              <p>
+                当社では、新型コロナウイルスによる感染拡大の状況を鑑みて、<br class="d-none d-md-block"  />ご利用者様の健康と安全のため、当面の期間、以下の対策をとっております。<br class="d-none d-md-block" />ご利用者様にはご不便、ご迷惑をお掛けいたしますが<br class="d-none d-md-block"/>何卒ご理解、ご協力のほど宜しくお願い申し上げます。
+              </p>
+             <div class="col-md-12 mb-5" >
+                <img src="images/info.svg" alt="お知らせ" class="w-75 mx-auto d-none d-md-block ">
+                <img src="images/info_sp.svg" alt="お知らせ" class="w-auto mx-auto d-block d-md-none ">
+            </div>
+            </div>
+          </div>
+        </div>
+      </section>
         <section>
             <div class="container">
                 <div class="row justify-content-center text-center">
