--- a/facility.html
+++ b/facility.html
@@ -40,7 +40,7 @@
                 <img src="images/logo_w.svg" width="200" class="d-block mx-auto" />
             </div>
             <div>
-                <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" class="img-fluid" />
+                <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" class="img-fluid" />
             </div>
             <!-- スマホヘッダーインフォ -->
             <div class="py-3 text-center">
@@ -75,7 +75,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" width="100%" />
+                <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" width="100%" />
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
@@ -151,11 +151,11 @@
                         <img src="images/facility_kasai.svg" alt="メモリアルホール かさい" class="img-fluid" />
                     </div>
                     <div class="col-md-6 mb-3">
-                        <img src="images/facility_kasai_two.webp" alt="大ホール" class="img-fluid" />
+                        <img src="images/facility_kasai_two.jpg" alt="大ホール" class="img-fluid" />
                         <h3>大ホール<small>【200名様まで収容可能です】</small></h3>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <img src="images/facility_kasai_three.webp" alt="小ホール" class="w-100" />
+                        <img src="images/facility_kasai_three.jpg" alt="小ホール" class="w-100" />
                         <h3>小ホール<small>【100名様まで収容可能です】</small></h3>
                     </div>
                     <div class="col-md-3 mb-3">
@@ -163,7 +163,7 @@
                         <h3>ご遺族様控え室</h3>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img src="images/facility_kasai_five.webp" alt="エントランス" class="img-fluid" />
+                        <img src="images/facility_kasai_five.jpg" alt="エントランス" class="img-fluid" />
                         <h3>エントランス</h3>
                     </div>
                     <div class="col-md-3">
@@ -223,7 +223,7 @@
                         <h4>プライベートルーム</h4>
                     </div>
                     <div class="col-md-3 mb-3">
-                        <img src="images/facility_fujimaki_four.webp" alt="居間" class="img-fluid" />
+                        <img src="images/facility_fujimaki_four.jpg" alt="居間" class="img-fluid" />
                         <h3>居間</h3>
                     </div>
                     <div class="col-md-3">
