--- a/access.html
+++ b/access.html
@@ -40,7 +40,7 @@
                 <img src="images/logo_w.svg" width="200" class="d-block mx-auto">
             </div>
             <div>
-                <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" class="img-fluid">
+                <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" class="img-fluid">
             </div>
             <!-- スマホヘッダーインフォ -->
             <div class="py-3 text-center">
@@ -71,7 +71,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" width="100%">
+                <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" width="100%">
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
