--- a/sitemap.html
+++ b/sitemap.html
@@ -44,13 +44,13 @@
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/plans_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/plans_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" class="d-block w-100">
+                        <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" class="d-block w-100">
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
             </div>
             <!-- PCメイン画像 -->
             <div class="container-fluid px-0">
-                <img src="images/facility_hero.webp" alt="メモリアルホールかさい メイン" width="100%">
+                <img src="images/facility_hero.jpg" alt="メモリアルホールかさい メイン" width="100%">
             </div>
             <!-- PCナビゲーション -->
             <div class="container my-3">
